fixtures/frontend/milestone-2/invalid/unknown-decorator/main.aivi
@mystery
value title = "Milestone 2"
